tests/ui/suggestions/issue-109291.stderr
error[E0599]: no function or associated item named `forced_capture` found for struct `Backtrace` in the current scope
  --> $DIR/issue-109291.rs:2:65
   |
LL |     println!("Custom backtrace: {}", std::backtrace::Backtrace::forced_capture());
   |                                                                 ^^^^^^^^^^^^^^
   |                                                                 |
   |                                                                 function or associated item not found in `Backtrace`
   |                                                                 help: there is an associated function with a similar name: `force_capture`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
